The EasyTimetable plugin seems to be globally setting image visibility to hidden instead of using a selector to affect only itself. Add CSS to help ensure Connections images visibility is set to visible.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -90,6 +90,7 @@ img.cn-image {
 	padding: 0 !important;
 	position: relative !important;
 	top: 0 !important;
+	visibility: visible;
 	width: auto; /* For proper IE8 support for max-width, width:auto needs to be defined. */
 }
 
